@@ -1,4 +1,8 @@
 User johns
+Date Thu May 27 16:26:13 CEST 2010
+
+    Added support to run on any X11 screen.
+
 Date Fri May 21 12:49:31 CEST 2010
     Added doxygen documentation generation.
     Added support to sleep while screen-saver is running or video is blanked.
